--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,15 @@ volumes:
   mysql_data:
 services:
   gemini-balance:
-    image: ghcr.io/snailyp/gemini-balance:latest
+    build: .            # 指定 Dockerfile 所在目录（当前目录）
     container_name: gemini-balance
     restart: unless-stopped
     ports:
       - "8000:8000"
     env_file:
       - .env
+    environment:
+      - TZ=Asia/Shanghai
     depends_on:
       mysql:
         condition: service_healthy
@@ -27,6 +29,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      TZ: Asia/Shanghai
     # ports:
     #   - "3306:3306"
     volumes:
